<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.bitbucket.tbrugz</groupId>
  <artifactId>sqldump</artifactId>
  <packaging>pom</packaging>
  <version>0.12-SNAPSHOT</version>

  <name>sqldump</name>
  <description>
    Utility to dump schema and data from a RDBMS
  </description>
  <url>https://github.com/tbrugz/sqldump</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <maven-clean-plugin.version>3.3.2</maven-clean-plugin.version>
    <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
    <!--<maven-dependency-plugin.version>3.2.0</maven-dependency-plugin.version>-->
    <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
    <maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>

    <maven-enforcer-plugin.requireJavaVersion>1.8.0</maven-enforcer-plugin.requireJavaVersion>
    <maven-enforcer-plugin.requireMavenVersion>3.6.3</maven-enforcer-plugin.requireMavenVersion>

    <buildnumber-maven-plugin.version>3.2.1</buildnumber-maven-plugin.version>
    <versions-maven-plugin.version>2.18.0</versions-maven-plugin.version>
    <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>

    <!-- release: maven-compiler 3.6.0+ required -->
    <!--
    <maven.compiler.release>8</maven.compiler.release>
    -->
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>

    <derby.version>10.14.2.0</derby.version>
    <h2.version>2.2.224</h2.version>
    <hsqldb.version>2.5.2</hsqldb.version>
    <jaxb.version>2.3.3</jaxb.version>
    <jaxb-impl.version>2.3.3</jaxb-impl.version>
    <log4j.version>1.2.17</log4j.version>
    <logback.version>1.2.13</logback.version>
    <poi-ooxml.version>5.3.0</poi-ooxml.version>
    <slf4j.version>1.7.32</slf4j.version>

  </properties>

  <modules>
    <module>sqldump-core</module>
    <module>sqldump-anttasks</module>
    <module>sqldump-graphml</module>
    <module>sqldump-jopendoc</module>
    <module>sqldump-logback</module>
    <!--<module>sqldump-mondrian</module>-->
    <module>sqlmigrate</module>
    <module>utils4sqldump</module>
  </modules>

  <licenses>
    <license>
      <name>GNU Lesser General Public License, Version 3</name>
      <url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/tbrugz/sqldump</connection>
    <developerConnection>scm:git:https://github.com/tbrugz/sqldump</developerConnection>
    <url>https://github.com/tbrugz/sqldump</url>
  </scm>

  <developers>
    <developer>
      <id>tbrugz</id>
      <name>Telmo Brugnara</name>
      <email>tbrugz@gmail.com</email>
    </developer>
  </developers>

  <distributionManagement>
    <snapshotRepository>
      <id>central</id>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
    </snapshotRepository>
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2/</url>
    </repository>
    <!--
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    -->
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${maven-enforcer-plugin.version}</version>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireJavaVersion>
                  <version>${maven-enforcer-plugin.requireJavaVersion}</version>
                </requireJavaVersion>
                <requireMavenVersion>
                  <version>${maven-enforcer-plugin.requireMavenVersion}</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- https://central.sonatype.org/publish/publish-portal-maven/ -->
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.8.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
          <!--
          <autoPublish>true</autoPublish>
          -->
        </configuration>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${maven-clean-plugin.version}</version>
        </plugin>
        <!--
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven-jar-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven-resources-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${maven-deploy-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>${maven-install-plugin.version}</version>
        </plugin>
        -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${versions-maven-plugin.version}</version>
          <configuration>
            <generateBackupPoms>false</generateBackupPoms>
            <!--<allowMajorUpdates>false</allowMajorUpdates>-->
          </configuration>
        </plugin>
  
        <!-- https://maven.apache.org/plugins/maven-source-plugin/usage.html -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.1</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <phase>verify</phase>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.6.3</version>
          <configuration>
            <source>8</source>
          </configuration>
          <!--<executions>
            <execution>
              <id>attach-javadocs</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>-->
        </plugin>

      </plugins>
    </pluginManagement>
  </build>

  <dependencies>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.3.5</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <!--
    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1.1</version>
      <scope>test</scope>
    </dependency>
    -->

  </dependencies>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>${maven-gpg-plugin.version}</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
